# ECE3514-Project4.2

./: CMakeLists.txt  Deque.hpp  Deque.txx  PalinFinderDriver.cpp  PalindromeFinder.cpp  PalindromeFinder.hpp  student_tests.cpp
__MACOSX/P4.2-3_starter/: ._CMakeLists.txt  ._Deque.hpp  ._Deque.txx  ._PalinFinderDriver.cpp  ._PalindromeFinder.cpp  ._PalindromeFinder.hpp  ._abstract_deque.hpp  ._catch.hpp  ._student_catch.cpp  ._student_tests.cpp
__MACOSX/P4.2-3_starter/test/: ._inputfile.txt  ._outputfile.txt
test/: inputfile.txt  outputfile.txt
